src/styles.css
@import "tailwindcss";

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Share Tech Mono", monospace;
    font-weight: 400;
    font-style: normal;
}

h1 {
    font-size: 32px;
    text-align: center;
}

h2 {
    font-size: 24px;
}

h3 {
    font-size: 18px;
}

textarea {
    height: 150px;
}

button {
    cursor: pointer;
}

p {
    font-size: 14px;
}

form {
    margin-top: 15px !important;
}

.image-upload-input {
    font-size: 14px;
}

.image-upload {
    height: 400px;
    object-fit: contain;
}

.profile-image-upload {
    height: 200px;
    object-fit: contain;
    margin-bottom: 15px;
}

.image-upload-input::file-selector-button {
    background-color: #007bff;
    color: white;
    padding: 2px 6px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    margin-right: 10px;
}

.main {
    max-width: 1000px;
    padding: 15px;
    margin: 15px auto;
}

.main-post {
    max-width: 1000px;
    padding: 0 15px;
    margin: 0 auto;
}

.search-container {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 20px 0;
    gap: 15px;
    flex-wrap: wrap;
}

.search-input, .filter-select {
    border: 1px solid rgb(172, 172, 172);
    padding: 4px;
    border-radius: 6px;
}

/* header */

.my-header {
    box-shadow: 0 1px 10px rgba(0,0,0,0.2);
}

.my-inner-header {
    max-width: 1000px;
    display: flex;
    justify-content: space-between;
    margin: auto;
    padding: 12px 0;
}

.my-nav ul {
    display: flex;
    justify-content: space-between;
}

.my-nav li, .my-logo {
    margin: 0 30px;
    padding: 2px 6px;
    font-size: 16px;
}

.my-nav li:hover, .comment-buttons:hover {
    background-color: rgb(220, 217, 217);
    border-radius: 4px;
    transition: background-color 0.5s ease;
}

.logout-page {
    width: 600px;
    height: 600px;
    margin: auto;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 20px;
}

/* forms */

.new-post-form {
    max-width: 500px;
    margin: auto;
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 10px;
}

.new-post-form input, .new-post-form textarea {
    border: 1px solid grey;
    padding: 4px;
    border-radius: 4px;
}

/* post */

.post-stats-and-icon {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.post-username, .post-tags {
    font-size: 13px;
}

.post-time {
    font-weight: 300;
    font-size: 12px;
    color: grey;
}

.post-tags {
    border-radius: 4px;
    padding: 4px;
}

.post-header {
    display: flex;
    max-width: 880px;
    margin: 15px auto 0 auto;
}

.profile-icon {
    margin: 5px 10px 5px 0;
    width: 40px;
    height: 40px;
}

.profile-icon img, .profile-icon-header img{
    border-radius: 50%;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.profile-icon-header {
    width: 30px;
    height: 30px;
    margin-right: 10px;
}

.posts-list {
    max-width: 600px;
    margin: auto;
    padding: 15px;
}

.post {
    display: flex;
    width: 100%;
    padding: 8px 4px;
    border-radius: 10px;
}

.horizontal-line {
    border-bottom: 0.5px solid rgb(196, 196, 196);
    width: 100%;
}

.post:hover {
    background-color: rgb(244, 244, 244);
}

.posts-list-column {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    gap: 2px;
    margin-top:20px;
}

.post-details {
    display: flex;
    flex-direction: column;
    gap: 10px;
    max-width: 800px;
}

.post-title-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.post-title-dropdown:hover{
    cursor: pointer;
    background-color: rgb(217, 217, 217);
    border-radius: 50%;
    padding: 2px 6px;
}

.post-content {
    min-height: 100px;
    margin-bottom: 15px;
}

.post-content p, .post-content h2 {
    margin: 10px 0;
}

.post img {
    margin: 0 15px 10px 0;
    width: 80px;
    height: 60px;
}

.post-card-tags {
    font-size: 12px;
    background-color: rgb(218, 215, 215);
    border-radius: 4px;
    padding: 1px 6px;
    margin: 5px 5px 0 0;
}

.tags-container {
    display:flex;
    flex-wrap: wrap;
}

.post-card-img-thumbnail {
    width: 100px;
    height: 70px;
    margin-right: 15px;
    flex-shrink: 0;
}

.post-card-img-thumbnail img{
    height: 100%;
    width: 100%;
    border-radius: 8px;
    object-fit: cover;
    object-position: center;
}

.post-card-img-placeholder {
    border: 1px solid rgb(190, 185, 185);
    height: 100%;
    width: 100%;
    border-radius: 8px;
    text-align: center;
    align-content: center;
}

.post-stats {
    display: flex;
    gap: 10px;
    width: 200px;
}

.post-stats div{
    display:flex;
    flex-direction: column;
    justify-content: center;
}

.profile-img {
    width: 30px;
    height: 30px;
}

.profile-page-img {
    margin: 20px auto;
    height: 250px;
    width: 250px;
}

.profile-page-img img{
    border-radius: 50%;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.post-image-upload img{
    height:100%;
}

.post-image-upload-container {
    background-color: rgb(36, 36, 36);
    width: 100%;
    display: flex;
    justify-content: center;
    height: 400px;
    border-radius: 12px;
    margin-bottom: 10px;
}

/* comment */

.comments-section {
    padding: 15px;
    margin: auto;
    max-width: 800px;
    margin-bottom: 20px;
}

.comment-toggle {
    padding: 10px;
    height: 30px;
    width: 100%;
    border-bottom: 1px solid rgb(207, 206, 206);
}

.comment {
    width: 100%;
    border: 1px solid rgb(190, 187, 187);
    padding: 10px;
}

.comment-buttons {
    padding: 4px 8px;
}

.single-comment {
    margin: 10px auto;
    display: flex;
    max-width: 800px;
    justify-content: space-between;
}

.single-comment-profile {
    height: 40px;
    width: 40px;
    margin-right: 10px;
    border-radius: 50%;
}

.display-comments {
    margin-bottom: 40px;
}

/* utils */

.small-font{
    font-size: 12px;
}

.button {
    border: none;
    background-color: #0d6efd;
    color: white;
    padding: 4px 6px;
    border-radius: 4px;
}

/* Properties */

.center {
    text-align: center;
    display: block;
}

.my-flex-start {
    display: flex;
    justify-content: start;
}

.my-flex-end {
    display: flex;
    justify-content: end;
}

.blue {
    color:#0d6efd;
}

.red-bg {
    background-color: rgb(255, 0, 0)
}

.underline {
    text-decoration: underline;
}

.margin-top {
    margin-top: 10px;
}

.margin-top-xl {
    margin-top: 40px;
}

.margin-left {
    margin-left: 10px;
}

.margin-bottom-lg {
    margin-bottom: 40px;
}

.font-24 {
    font-size: 24px;
}

.ml-l {
    margin-left: 20px;
}

.error {
    text-align: center;
    color: red;
}

.black {
    color: black;
}

.icon {
    width: 18px;
    height: 18px;
}

.flex-column {
    display: flex;
    flex-direction: column;
}

.bold {
    color: black;
    font-weight: 600;
}

.delete-edit-post {
    display: flex;
    gap: 10px;
}

.number-of-comments {
    margin-left: 20px;
}

.back:hover {
    background-color: rgb(244, 244, 244);
    border-radius: 50%;
}

.link-color {
    color: #007bff
}

.f16 {
    font-size: 16px;
}

.f40 {
    font-size: 40px;
}

